--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,23 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+default: &defaults
+  adapter: mysql2
+  host: localhost
+  username: root
+  password:
+  port: 3306
+  pool: 10
+  encoding: utf8
+  reconnect: false
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *defaults
+  database: bitcrap_dev
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  <<: *defaults
+  database: bitcrap_test
+  pool: 30
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *defaults
+  database: bitcrap_production
+
