update nginx conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  # server_name bitcrap.com;
+  server_name bitcrap.com;
 
   root /home/username/apps/bitcrap/current/public;
   access_log /home/username/apps/bitcrap/current/log/nginx.access.log;
