--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -10,9 +10,9 @@ server {
   access_log /home/deploy/apps/bitcrap/current/log/nginx.access.log;
   error_log /home/deploy/apps/bitcrap/current/log/nginx.error.log info;
 
-  ssl on;
-  ssl_certificate  /home/deploy/apps/bitcrap/certs/bitcrap.crt;
-  ssl_certificate_key  /home/deploy/apps/bitcrap/certs/bitcrap.key;
+  #ssl on;
+  #ssl_certificate  /home/deploy/apps/bitcrap/certs/bitcrap.crt;
+  #ssl_certificate_key  /home/deploy/apps/bitcrap/certs/bitcrap.key;
 
   location ^~ /assets/ {
     gzip_static on;
