--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,16 +3,20 @@ upstream puma {
 }
 
 server {
+
   listen 80 default_server deferred;
+
+  listen 443 ssl;
+
   server_name bitcrap.com;
 
   root /home/deploy/apps/bitcrap/current/public;
   access_log /home/deploy/apps/bitcrap/current/log/nginx.access.log;
   error_log /home/deploy/apps/bitcrap/current/log/nginx.error.log info;
 
-  #ssl on;
-  #ssl_certificate  /home/deploy/apps/bitcrap/certs/bitcrap.crt;
-  #ssl_certificate_key  /home/deploy/apps/bitcrap/certs/bitcrap.key;
+  ssl on;
+  ssl_certificate  /home/deploy/apps/bitcrap/certs/bitcrap.crt;
+  ssl_certificate_key  /home/deploy/apps/bitcrap/certs/bitcrap.key;
 
   location ^~ /assets/ {
     gzip_static on;
