--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -18,6 +18,9 @@ server {
   ssl_certificate  /home/deploy/apps/bitcrap/certs/bitcrap.crt;
   ssl_certificate_key  /home/deploy/apps/bitcrap/certs/bitcrap.key;
 
+  ssl_session_cache shared:SSL:20m;
+  ssl_session_timeout 10m;
+
   location ^~ /assets/ {
     gzip_static on;
     expires max;
