--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,6 +21,13 @@ server {
   ssl_session_cache shared:SSL:20m;
   ssl_session_timeout 10m;
 
+  proxy_set_header X_FORWARDED_PROTO https;
+  proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header  Host $http_host;
+  proxy_set_header  X-Url-Scheme $scheme;
+  proxy_redirect    off;
+  proxy_max_temp_file_size 0;
+
   location ^~ /assets/ {
     gzip_static on;
     expires max;
