--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,8 +21,6 @@ server {
   ssl_session_cache shared:SSL:20m;
   ssl_session_timeout 10m;
 
-  proxy_set_header X-Forwarded-Proto $scheme;
-
   location ^~ /assets/ {
     gzip_static on;
     expires max;
@@ -31,7 +29,8 @@ server {
 
   try_files $uri/index.html $uri @puma;
   location @puma {
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
