update nginx.conf to force http redirect to https

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,8 +3,14 @@ upstream puma {
 }
 
 server {
+  listen 80;
+  server_name bitcrap.com;
+  return 301 https://bitcrap.com$request_uri;
+}
 
-  listen 80 default_server deferred;
+server {
+
+  # listen 80 default_server deferred;
 
   listen 443 ssl;
 
